--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "fontawesome": "~4.3.0",
     "react": "~0.13.3",
-    "reqwest": "~1.1.5"
+    "axios": "~0.5.4"
   }
 }
