--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fontawesome": "~4.3.0",
     "react": "~0.13.3",
-    "axios": "~0.5.4"
+    "axios": "~0.5.4",
+    "materialize": "~0.96.1"
   }
 }
