Can add and remove tags

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "fontawesome": "~4.3.0",
     "react": "~0.13.3",
     "axios": "~0.5.4",
-    "materialize": "~0.96.1"
+    "materialize": "~0.96.1",
+    "underscore": "~1.8.3",
+    "classnames": "~2.1.1"
   }
 }
