--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ events {
 }
 
 http {
+  include mime.types;
   default_type  application/octet-stream;
 
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -25,19 +26,17 @@ http {
 
     root /Users/toddlunter/Misc/home_inventory/public;
 
-    location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|map)$ {
-      try_files $uri =404;
-    }
-
-    location / {
+    location /api {
       proxy_set_header  Host        $http_host;
       proxy_set_header  X-Real-IP       $remote_addr;
       proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_redirect off;
-      proxy_intercept_errors on;
-      error_page 404 =200 /index.html;
 
       proxy_pass http://inventory;
+    }
+
+    location / {
+      try_files $uri /index.html;
     }
   }
 }
